syntax = "proto3";
option java_package = "com.ubtechinc.codemao";
message MessageHeader {
    int32 commandId = 1;
    int32 sendSerial = 2;
    int32 responseSerial = 3;
}
